Version 13.1.3 - Improve PF2e trait colouring per thejoester (closes [#7](https://github.com/turthalion/chat-card-backgrounds/issues/7)) - Improve PF1e visibility by excluding certain classes from calculated text colours. Reduces effectiveness of some chat card background modes but vastly improves readability (closes [#6](https://github.com/turthalion/chat-card-backgrounds/issues/6))

--- a/styles/chatcard.css
+++ b/styles/chatcard.css
@@ -26,7 +26,7 @@
 }
 
 .chat-message.card-style-message .message-content,
-.chat-message.card-style-message .message-content *:not(.tag) {
+.chat-message.card-style-message .message-content *:not(.tag):not(.chat-attack):not(.chat-attack *) {
     color: inherit;
 }
 
@@ -55,7 +55,7 @@
 }
 
 .chat-message .message-content,
-.chat-message .message-content *:not(.tag) {
+.chat-message .message-content *:not(.tag):not(.chat-attack):not(.chat-attack *) {
     color: inherit;
 }
 
